@@ -13,10 +13,24 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  build-and-test:
+  linux-build-and-test:
     uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
     secrets: inherit
     with:
-      matrix-os-version: "[ 'ubuntu-latest', 'macos-latest', 'windows-latest' ]"
-      matrix-python-version: "[ '3.7', '3.8', '3.9', '3.10' ]"
-      poetry-version: "1.2.0"
+      matrix-os-version: "[ 'ubuntu-latest' ]"
+      matrix-python-version: "[ '3.7', '3.8', '3.9', '3.10', '3.11' ]"  # run Linux tests on all supported Python versions
+      poetry-version: "1.2.2"
+  macos-build-and-test:
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
+    secrets: inherit
+    with:
+      matrix-os-version: "[ 'macos-latest' ]"
+      matrix-python-version: "[ '3.11' ]"  # only run MacOS tests on latest Python
+      poetry-version: "1.2.2"
+  windows-build-and-test:
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
+    secrets: inherit
+    with:
+      matrix-os-version: "[ 'windows-latest' ]"
+      matrix-python-version: "[ '3.11' ]"  # only run Windows tests on latest Python
+      poetry-version: "1.2.2"
