@@ -2,6 +2,7 @@ Version 3.6.9     unreleased
 
 	* Support Python 3.11.
 	* Use locale.getlocale() instead of .getdefaultlocale() for >= 3.11.
+	* Adjust GHA build to run MacOS and Windows tests only on latest Python.
 
 Version 3.6.8     24 Oct 2022
 
